<resources>
    <string name="app_name">iCracha</string>

    <!--SIGNIN / SIGNUP-->
    <string name="img_description_logo">Logo Aplicativo</string>
    <string name="edt_text_user">Login (E-mail)</string>
    <string name="edt_text_email">Login (E-mail)</string>
    <string name="edt_text_pass">Nova Senha</string>
    <string name="edt_text_pass_confirm">Confime a Senha</string>
    <string name="btn_signin">Entrar</string>
    <string name="link_signup">Novo Cadastro</string>

    <string name="text_signup_title">Cadastro</string>
    <string name="edt_text_doc_name">CPF</string>
    <string name="edt_text_full_name">Nome Completo</string>
    <string name="btn_signup">Cadastrar</string>

    <!-- Status Fragment -->
    <string name="btnTitleScan">Bater Ponto</string>
    <string name="CurrentStatus">Na Empresa</string>
    <string name="Username">Pedro</string>
    <string name="ative_gps">Ative seu GPS para bater o ponto</string>
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">QRCode não capturado</string>
    <string name="barcode_error_format">"Erro lendo QRCode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Acesso à câmera é necessário para leitura do código</string>
    <string name="no_camera_permission">Esta aplicação não pode rodar, pois não possui permissão de acesso à câmera.</string>
    <string name="low_storage_error">Aplicativo não pode rodar normalmente por falta de espaço em disco.</string>

    <!-- Profile Fragment -->
    <string name="title_profile">Informações Pessoais</string>
    <string name="label_cpf">CPF</string>
    <string name="label_username">Usuário</string>
    <string name="label_name">Nome</string>
    <string name="label_birthday">Nascimento</string>
    <string name="label_phone">Telefone</string>
    <string name="label_email">Email</string>
    <string name="image_profile_description">Foto de Perfil</string>
    <string name="txt_cpf_description">CPF do usuário</string>
    <string name="txt_username_description">Nome de usuário</string>
    <string name="txt_name_description">Nome Completo</string>
    <string name="txt_birthday_description">Data de Nascimento</string>
    <string name="txt_phone_description">Telefone do usuário</string>
    <string name="txt_email_description">Email do usuário</string>

    <!-- Profile Edit Fragment -->
    <string name="edt_text_hint_name">Nome</string>
    <string name="edt_text_hint_birthday">dd/mm/aaaa</string>
    <string name="edt_text_hint_phone">Telefone</string>
    <string name="edt_text_hint_email">Email</string>
    <string name="btn_cancel_description">Botão para cancelar</string>
    <string name="btn_save_description">Botão para salvar alterações</string>
    <string name="txt_change_password">Alterar Senha</string>

    <!-- Strings related to report fragment -->
    <string name="placeholder_report_day">01</string>

</resources>
