<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileEditFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/container_padding">

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/image_profile_description"
                    android:layout_height="@dimen/profile_image_height" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:labelFor="@id/txtName"
                        style="@style/LabelTextView"
                        android:text="@string/label_cpf" />

                    <TextView
                        android:id="@+id/txtCpf"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:contentDescription="@string/txt_cpf_description"
                        style="@style/FormTextView"
                        android:text="11526790742" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:labelFor="@id/txtName"
                        style="@style/LabelTextView"
                        android:text="@string/label_username" />

                    <TextView
                        android:id="@+id/txtUsername"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:contentDescription="@string/txt_name_description"
                        style="@style/FormTextView"
                        android:text="phalopes" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:labelFor="@id/txtName"
                        style="@style/LabelTextView"
                        android:text="@string/label_name" />

                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="text"
                        style="@style/FormTextView"
                        android:hint="@string/edt_text_hint_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/LabelTextView"
                        android:text="@string/label_birthday" />

                    <EditText
                        android:id="@+id/edtBirthday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="date"
                        style="@style/FormTextView"
                        android:hint="@string/edt_text_hint_birthday" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/LabelTextView"
                        android:text="@string/label_phone" />

                    <EditText
                        android:id="@+id/edtPhone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="phone"
                        style="@style/FormTextView"
                        android:hint="@string/edt_text_hint_phone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/LabelTextView"
                        android:text="@string/label_email" />

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="textEmailAddress"
                        style="@style/FormTextView"
                        android:hint="@string/edt_text_hint_email" />

                </LinearLayout>

                <LinearLayout
                    style="@style/TextViewDivider">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="55dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_change_password"
                        style="@style/LabelTextView"
                        android:textAlignment="center"
                        />

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        style="@style/FormTextView"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:hint="@string/edt_text_pass" />

                    <EditText
                        android:id="@+id/edt_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        style="@style/FormTextView"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:hint="@string/edt_text_pass_confirm" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_baseline_check_circle_24px"
            android:contentDescription="@string/btn_save_description" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_baseline_cancel_24px"
            android:contentDescription="@string/btn_cancel_description" />

    </RelativeLayout>

</FrameLayout>