<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/container_padding"
    android:background="@drawable/tela"
    tools:context=".SignupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:text="@string/text_signup_title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/edt_txt_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_text_doc_name"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/edt_txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_text_full_name"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/edt_txt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/edt_text_username"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/edt_txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/edt_text_pass"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/edt_txt_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/edt_text_pass_confirm"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup"
        android:textColor="@android:color/black"
        />

</LinearLayout>