<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/container_padding"
    android:background="@drawable/tela"
    tools:context=".SigninActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/img_description_logo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edt_text_email"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edt_text_pass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_signin"
            android:layout_marginTop="20dp"
            style="@style/ButtonStyle"
            />

        <TextView
            android:id="@+id/link_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_signup"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:padding="10dp"
            />

    </LinearLayout>

</LinearLayout>