<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StatusFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/container_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="Olá " />

            <TextView
                android:id="@+id/txtNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/Username" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:text="@string/CurrentStatus"
            android:padding="5dp" />

        <LinearLayout
            style="@style/TextViewDivider">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/txt_date_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00/00/0000"
                android:textStyle="bold"
                android:textSize="24sp"
                />

            <ListView
                android:id="@+id/lvw_report_time"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                >
            </ListView>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txtWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:textSize="14sp"
        android:padding="5dp" />

    <Button
        android:id="@+id/btnScan"
        android:text="@string/btnTitleScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="bottom"/>

</FrameLayout>